# todolist_chatbot

./: .gitignore  LICENSE  README.md  requirements.txt
app/: config.py  main.py
app/ui/: cli.py
data/raw/: test.txt
docs/: ARCHITECTURE.md
legacy/: README.md
legacy/rag_stack/chunking/: text_chunker.py
legacy/rag_stack/embedding/: embedder.py
legacy/rag_stack/preprocess/: text_cleaner.py
legacy/rag_stack/rag/: pipeline.py
legacy/rag_stack/vectorstore/: vectordb.py
middleware/: pyproject.toml
middleware/app/: main.py
middleware/app/api/v1/endpoints/: health.py
middleware/app/core/: config.py
middleware/app/schemas/: health.py
middleware/app/services/: health.py
notebooks/: QnA_Chat_bot.ipynb
scripts/: test_openai.py
sql/: 001_init.sql
src/llm/: generator.py
src/loader/: document_loader.py
src/prompt/: prompt_template.py
src/retriever/: retriever.py
src/todolist_chatbot/: __init__.py  config.py
src/todolist_chatbot/bot/: __init__.py  core.py
src/todolist_chatbot/cogs/: todo_cog.py
src/todolist_chatbot/dialogue/: __init__.py  manager.py
src/todolist_chatbot/formatters/: __init__.py  response_formatter.py
src/todolist_chatbot/llm/: __init__.py  interpreter.py
src/todolist_chatbot/nlu/: __init__.py  router.py
src/todolist_chatbot/repositories/: __init__.py  room_repository.py  supabase.py  todo_repository.py
src/todolist_chatbot/services/: __init__.py  room_service.py  todo_service.py
